# AVeLib

./: CMakeLists.txt  avelib.pc.in
include/: vehicle.hpp
src/: movement.cpp  movement.hpp  vehicle.cpp
tests/: movement-math.cpp
